--- a/continuação flashcard/continuação flashcard/style.css
+++ b/continuação flashcard/continuação flashcard/style.css
@@ -1,5 +1,12 @@
+:root{
+    --texto-principal:#000000;
+    --texto-pergunta: #ffffff;
+    --texto-resposta: #ffffff;
+
+}
+
 body {
-    background-color: hwb(190 13% 31%);
+    background: url('endricklindo.jpg');
     font-family: Bai Jamjuree;
 }
 
@@ -9,26 +16,42 @@ body {
 
 .cartao {
     margin: 1rem 1rem;
-    background-color:  hwb(190 74% 0%);
+    color:var(--texto-pergunta);
+    border: 3px solid var(--texto-pergunta);
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
+    border-radius: 0.8rem;
 }
 
 
 .cartao__conteudo {
     text-align: center;
-    background-color: hwb(190 74% 0%);
+    color:var(--texto-pergunta);
+    color: var(--texto-pergunta);
 }
 
 .cartao__conteudo h3{
-    background-color: white;
+    color:var(--texto-pergunta);
+    border: 2px solid var(--texto-pergunta);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+}
+
+.cartao__conteudo__pergunta p{
+   color: var(--texto-pergunta);
+   font-weight: 600;
+   font-size: 22px;
+}
+.cartao__conteudo__resposta P{
+    color: var(--texto-pergunta);
+    font-weight: 500;
+    font-size: 20px;
+    padding-top: 2em;
 }
 
 footer {
