--- a/continuação flashcard/continuação flashcard/style.css
+++ b/continuação flashcard/continuação flashcard/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url('endricklindo.jpg');
+    background: url('Beyoncé.wallpaper.jpg');
     font-family: Bai Jamjuree;
 }
 
@@ -21,7 +21,7 @@ body {
 .cartao {
     margin: 1rem 1rem;
     color:var(--texto-pergunta);
-    border: 3px solid var(--texto-pergunta);
+    border: 2px solid var(--texto-pergunta);
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -60,13 +60,14 @@ body {
 }
 .cartao__conteudo__resposta p{
     color: var(--texto-pergunta);
-    font-weight: 500;
+    font-weight: 600;
+    font-style: italic;
     font-size: 20px;
     padding-top: 2em;
     margin-top: 6rem;
 }
 
-.cartao:hover .cartao__conteudo{
+.cartao.active .cartao__conteudo{
     transform: rotateY(180deg);
 }
 
